--- a/locales/es-419.json
+++ b/locales/es-419.json
@@ -1,7 +1,9 @@
 {
-  "description_palette": "Crea un color vibrante desde un color base",
-  "description_tints": "Genera matices armoniosos desde tu color base",
+  "palette_label": "Paleta",
+  "tints_label": "Tonos",
+  "description_palette": "Crear una paleta de colores a partir de un color base",
+  "description_tints": "Generar tonos armoniosos a partir de tu color base",
   "baseColorLabel": "Color base",
-  "reload": "Barajar colores",
+  "reload": "Mezclar colores",
   "addToDesign": "Agregar al diseño"
 }
